swagger bug fix on category
