# docs/swagger.json
@@ -258,13 +258,6 @@
                 "summary": "Update Address",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Address ID in the URL path",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
                         "description": "Updated address information",
                         "name": "address",
                         "in": "body",
@@ -307,7 +300,7 @@
                 "tags": [
                     "Admins"
                 ],
-                "summary": "Get Admin Details",
+                "summary": "Get Dashbord Details",
                 "responses": {
                     "200": {
                         "description": "Admin details retrieved successfully",
@@ -345,6 +338,7 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "default": 1,
                         "description": "Page number for pagination (default 1)",
                         "name": "page",
                         "in": "query",
@@ -352,6 +346,7 @@
                     },
                     {
                         "type": "integer",
+                        "default": 5,
                         "description": "Number of items to return per page (default 5)",
                         "name": "limit",
                         "in": "query",
@@ -392,17 +387,13 @@
                 "summary": "Create a Brand",
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "Name of the brand",
-                        "name": "name",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Description of the brand",
-                        "name": "description",
-                        "in": "formData"
+                        "name": "Brand",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requestmodel.Brand"
+                        }
                     }
                 ],
                 "responses": {
@@ -489,17 +480,13 @@
                         "required": true
                     },
                     {
-                        "type": "string",
                         "description": "Updated name of the brand",
                         "name": "name",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Updated description of the brand",
-                        "name": "description",
-                        "in": "formData"
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requestmodel.BrandDetails"
+                        }
                     }
                 ],
                 "responses": {
@@ -545,6 +532,7 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "default": 1,
                         "description": "Page number for pagination (default 1)",
                         "name": "page",
                         "in": "query",
@@ -552,6 +540,7 @@
                     },
                     {
                         "type": "integer",
+                        "default": 5,
                         "description": "Number of items to return per page (default 5)",
                         "name": "limit",
                         "in": "query",
@@ -592,11 +581,13 @@
                 "summary": "Add Category",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Name of the category",
-                        "name": "name",
-                        "in": "query",
-                        "required": true
+                        "description": "Details of the category",
+                        "name": "Details",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requestmodel.Category"
+                        }
                     }
                 ],
                 "responses": {
@@ -680,17 +671,13 @@
                         "required": true
                     },
                     {
-                        "type": "string",
-                        "description": "Updated name of the category",
-                        "name": "name",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Updated description of the category",
-                        "name": "description",
-                        "in": "formData"
+                        "description": "Updated category",
+                        "name": "category",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requestmodel.CategoryDetails"
+                        }
                     }
                 ],
                 "responses": {
@@ -702,12 +689,6 @@
                     },
                     "400": {
                         "description": "Invalid input or validation error",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    },
-                    "404": {
-                        "description": "Category not found",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
@@ -1190,7 +1171,7 @@
                 }
             }
         },
-        "/admin/user/block": {
+        "/admin/users/block": {
             "patch": {
                 "security": [
                     {
@@ -1233,7 +1214,7 @@
                 }
             }
         },
-        "/admin/user/getuser": {
+        "/admin/users/getuser": {
             "get": {
                 "security": [
                     {
@@ -1276,7 +1257,7 @@
                 }
             }
         },
-        "/admin/user/unblock": {
+        "/admin/users/unblock": {
             "patch": {
                 "security": [
                     {
@@ -2809,6 +2790,13 @@
                 "summary": "Add Product",
                 "parameters": [
                     {
+                        "type": "file",
+                        "description": "Product image for adding",
+                        "name": "productImage",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
                         "minimum": 500,
                         "type": "integer",
                         "name": "batterycapacity",
@@ -2849,11 +2837,6 @@
                         "required": true
                     },
                     {
-                        "type": "string",
-                        "name": "imageURL",
-                        "in": "formData"
-                    },
-                    {
                         "minimum": 0,
                         "type": "integer",
                         "name": "mrp",
@@ -2886,11 +2869,6 @@
                         "name": "ram",
                         "in": "formData",
                         "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "name": "saleprice",
-                        "in": "formData"
                     },
                     {
                         "minimum": 2,
@@ -3687,6 +3665,32 @@
                 }
             }
         },
+        "requestmodel.Brand": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "requestmodel.BrandDetails": {
+            "type": "object",
+            "required": [
+                "id",
+                "name"
+            ],
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "requestmodel.Cart": {
             "type": "object",
             "required": [
@@ -3704,6 +3708,32 @@
                 },
                 "quantity": {
                     "type": "integer"
+                }
+            }
+        },
+        "requestmodel.Category": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "requestmodel.CategoryDetails": {
+            "type": "object",
+            "required": [
+                "id",
+                "name"
+            ],
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
